[project]
name = "aws-ssm-juggle"
version = "24.12.0"
description = "AWS SSM tool for ECS/EC2 (Shell, Port Forwarding, ...)"
authors = [{ name = "Stefan Heitmüller", email = "stefan.heitmueller@gmx.com" }]
readme = "README.md"
license = "MIT"
dependencies = [
    "configargparse",
    "boto3",
    "shtab",
    "InquirerPy",
    "diskcache",
]

[project.urls]
Repository = "https://github.com/morph027/aws-ssm-juggle"

[project.scripts]
ecs-juggle = "aws_ssm_juggle.ecs:run"
ec2-juggle = "aws_ssm_juggle.ec2:run"
parameter-juggle = "aws_ssm_juggle.parameter:run"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["I", "F"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
